tests/paczka1/fuzzy1/33539049.err
Error in line 6: xP8 A683 79,T
Error in line 1: y5x3AlA S531 68,9
Error in line 15: xP8 A683 289,1
Error in line 18: xP8 S531 46,5
Error in line 23: cWAI A145 23,7
